test/conformance/chainsaw/cli/apply/apply-on-cluster-scoped-resources/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: restrict-binding-system-groups
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [rbac.authorization.k8s.io]
      apiVersions: [v1]
      operations: [CREATE, UPDATE]
      resources: [rolebindings, clusterrolebindings]
  validations:
    - expression: "object.roleRef.name != 'system:masters'"
      message: "Binding to system:masters is not allowed."
