test/conformance/chainsaw/cli/apply/apply-on-cluster-scoped-resources/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-on-cluster-scoped-resources
spec:
  concurrent: false
  steps:
  - name: step-01  
    try:  
    - script:  
        content: kubectl create rolebinding my-rolebinding --role=my-role --user=my-user
  - name: step-02
    try:  
    - script:  
        content: kubectl create clusterrolebinding clusterrolebinding --clusterrole=my-clusterrole --user=my-user
  - name: step-04
    try:
    - script:
        content: kyverno apply policy.yaml --cluster
        check:  
          ($error != null): false
